# gordi-agent

./: README.md  default.nix  devenv.nix  flake-rs.nix  flake.nix  pyproject.toml
devices/: button.py
gordi_agent/: __init__.py
