[tool.poetry]
name = "gordi-agent"
version = "0.1.0"
description = ""
authors = ["Marc Solà Nadal <mail@marcsolanadal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paho-mqtt = "^2.1.0"

[tool.poetry.scripts]
gordi-agent = "gordi_agent:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
